[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "citam_pydraw"
version = '2.0'
authors = [  { name="Nao Yamanouchi", email="nao.yamanouchi@ga.aais-lab.org"},]
description = "CIT-AM Introduction Programming class lib"
license = {text = "3-Clause BSD License"}
requires-python = ">=3.10.5"

[tool.poetry.group.dev.dependencies]
tkinter = "^8.6"
pillow = "^11.2"
