[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "citam_pydraw"
authors = [  { name="Nao Yamanouchi", email="nao.yamanouchi@ga.aais-lab.org"},]
description = "CIT-AM Introduction Programming class lib"
readme = "README.md"
license = "LICENSE.txt"
requires-python = ">=3.10.5"
dinamic = {"version"}

[tool.poetry.group.dev.dependencies]
tkinter = "^8.6"
pillow = "^11.2"

[project.urls]
Documentation = "https://flit.pypa.io"
Source = "https://github.com/pypa/flit"
