[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "citam_pydraw"
description = "CIT-AM Introduction Programming class lib"
readme = "README.md"
license = "LICENSE.txt"
requires-python = ">=3.10.5"
dependencies = [
    "tkinter >=8.6",
    "pillow >=11.2"
]
authors = [  { name="Nao Yamanouchi", email="nao.yamanouchi@ga.aais-lab.org"},]
maintainers = [
   { name="Nao Yamanouchi", email="nao.yamanouchi@ga.aais-lab.org"}
]
dinamic = {"version"}

classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Documentation = "https://github.com/aais-lab/citam_pydraw.git"
Source = "https://github.com/aais-lab/citam_pydraw.git"
Issues = "https://github.com/aais-lab/citam_pydraw/issues"
